# simple-substrate-governance-node

./: Cargo.toml  README.md
node/: Cargo.toml  build.rs
pallets/simple-governance/: Cargo.toml
pallets/simple-governance/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
