[package]
name = "simple-substrate-governance-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "Unlicense"
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# lokalne pallety
pallet-minimal-template = { path = "../pallets/template" }
pallet-simple-governance = { path = "../pallets/simple-governance" }

[build-dependencies]
substrate-wasm-builder = { path = "../../polkadot-sdk/substrate/utils/wasm-builder" }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "pallet-minimal-template/std",
    "pallet-simple-governance/std",
]