[package]
name = "pallet-simple-governance"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
codec = { package = "parity-scale-codec", features = ["derive"], workspace = true }
scale-info = { features = ["derive"], default-features = false, workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
    "codec/std",
    "scale-info/std"
]