[package]
name = "pallet-minimal-template"
description = "A minimal pallet built with FRAME, part of Polkadot Sdk."
version = "0.0.0"
license = "Unlicense"
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], default-features = false, workspace = true }
scale-info = { features = ["derive"], default-features = false, workspace = true }
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
sp-std = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std"
]
